        - Add extra custom condition coderef attribute 'foreign_result_object'
          to allow for proper reverse-relationship emulation
          (i.e. $result->set_from_related($custom_rel, $foreign_result_object)
        - When in a transaction, DBIC::Ordered now seamlesly handles result
          objects that went out of sync with the storage (RT#96499)

    * Fixes
        - Fix Resultset delete/update affecting *THE ENTIRE TABLE* in cases
          of empty (due to conditions) resultsets with multi-column keys
        - Fix on_connect_* not always firing in some cases - a race condition
          existed between storage accessor setters and the determine_driver
          routines, triggering a connection before the set-cycle is finished
        - Fix failure to detect stable order criteria when in iterator
          mode of a has_many prefetch off a search_related chain
        - Prevent erroneous database hit when accessing prefetched related
          resultsets with no rows
        - Fix incorrect handling of custom relationship conditions returning
          SQLA literal expressions
        - Fix long standing bug with populate() getting confused by hashrefs
          with different sets of keys: http://is.gd/2011_dbic_populate_gotcha
        - Fix multi-value literal populate not working with simplified bind
          specifications
        - Massively improve the implied resultset condition parsing - now all
          applicable conditions within a resultset should be properly picked
          up by create() and populate()
        - Ensure definitive condition extractor handles bizarre corner cases
          without bombing out (RT#93244)
        - Fix set_inflated_column incorrectly handling \[] literals (GH#44)
        - Ensure that setting a column to a literal invariably marks it dirty
        - Work around exception objects with broken string overloading in one
          additional codepath (missed in 0.08260)