@@ -12,6 +12,8 @@ Revision history for DBIx::Class
           (i.e. $result->set_from_related($custom_rel, $foreign_result_object)
         - When in a transaction, DBIC::Ordered now seamlesly handles result
           objects that went out of sync with the storage (RT#96499)
+        - CDBICompat::columns() now supports adding columns through supplied
+          Class::DBI::Column instances (GH#52)
 
     * Fixes
         - Fix Resultset delete/update affecting *THE ENTIRE TABLE* in cases
